src/styles/global.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

.prose table {
  @apply lg:-mx-30 w-auto;
}

.prose aside {
  @apply bg-amber-100 px-4 py-0.5 text-sm leading-6 border-l-2;
}

.lead {
  @apply text-3xl py-10 text-blue-600 font-bold;
}

.button-blue {
  @apply rounded-lg bg-blue-500 hover:bg-blue-600 text-white font-semibold mx-2 px-3 py-3 no-underline whitespace-nowrap;
}

.regions path {
  stroke:#acc;
  stroke-width: 0.5px;
}
.regions path:hover {
  fill:#8af;
}

